Node_Package/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/log/build_2021-03-01_18-10-37/lg_sub_groundtruth/stderr.log
  File "/home/acclivis/script/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py", line 142
    autoware_boxes[c_autoware_boxes].centroid.x,
                 ^
SyntaxError: invalid syntax

